fix[tariffs-form][src/app/components/forms/tariffs-manages-form/tariffs-form.component.html]: change form submit handler to registerOrEdit

--- a/src/app/components/forms/tariffs-manages-form/tariffs-form.component.html
+++ b/src/app/components/forms/tariffs-manages-form/tariffs-form.component.html
@@ -126,7 +126,7 @@
   <form
     [formGroup]="tariffForm"
     class="grid grid-cols-12 gap-4"
-    (ngSubmit)="editTariffForm()"
+    (ngSubmit)="registerOrEdit()"
   >
     <app-search-auto-complete
       class="col-span-12"
