--- a/src/app/components/forms/wallet-payment-form/wallet-payment-form.component.html
+++ b/src/app/components/forms/wallet-payment-form/wallet-payment-form.component.html
@@ -6,7 +6,7 @@
         class="border-b border-gray-300 flex items-center justify-center"
         style="height: 60px"
       >
-        <span class="font-bold text-xl px-4">شارژ آنلاین کیف پول</span>
+        <span class="font-bold text-xl px-4">شارژ کیف پول</span>
       </div>
     </ng-template>
 
@@ -17,11 +17,11 @@
       >
         <div class="flex gap-2">
           <div class="font-semibold">شناسه کیف پول:</div>
-          <div>{{ userWallet()?.MoneyWalletId }}</div>
+          <div dir="ltr">{{ userWallet()?.MoneyWalletId }}</div>
         </div>
         <div class="flex gap-2">
           <div class="font-semibold">کد شناسایی کیف پول:</div>
-          <div>{{ userWallet()?.MoneyWalletCode }}</div>
+          <div dir="ltr">{{ userWallet()?.MoneyWalletCode }}</div>
         </div>
         <div class="flex gap-2">
           <div class="font-semibold">موجودی:</div>
