ui[table][src/app/components/shared/table/table.component.html]: add column dir binding with default rtl for text alignment

--- a/src/app/components/shared/table/table.component.html
+++ b/src/app/components/shared/table/table.component.html
@@ -56,7 +56,11 @@
     @if (!loading) {
       <tr class="text-nowrap" [pSelectableRow]="row">
         @for (column of columns; track column.field) {
-          <td class="text-center" [class]="getTdClass(row)">
+          <td
+            class="text-center"
+            [class]="getTdClass(row)"
+            [dir]="column.dir ?? 'rtl'"
+          >
             @switch (getColumnType(column)) {
               @case (ColumnType.TEXT) {
                 <span
