ui[user-info-form][src/app/components/forms/user-management-form/user-Info-form/user-info-form.component.html]: add validationField bindings for fullName and mobile

--- a/src/app/components/forms/user-management-form/user-Info-form/user-info-form.component.html
+++ b/src/app/components/forms/user-management-form/user-Info-form/user-info-form.component.html
@@ -59,6 +59,7 @@
         [control]="getUserFormControl('name')"
         [addonWidth]="addonWidth"
         [label]="appTitles.inputs.users.userNameTitle"
+        validationField="fullName"
       />
     </div>
 
@@ -73,6 +74,7 @@
           [control]="getUserFormControl('phone')"
           [addonWidth]="addonWidth"
           type="number"
+          validationField="mobile"
         />
       </div>
     </div>
