--- a/src/app/components/forms/driver-load-management-form/load-allocation-priority/load-allocation-priority.component.html
+++ b/src/app/components/forms/driver-load-management-form/load-allocation-priority/load-allocation-priority.component.html
@@ -1,6 +1,6 @@
 <!-- No allocations message -->
 <div
-  class="text-center font-bold text-lg md:text-xl bg-red-100 border border-red-300 rounded-lg py-3 my-4"
+  class="text-center font-bold text-lg md:text-xl bg-red-100 dark:bg-red-400 border border-red-300 rounded-lg py-3 my-4"
   [hidden]="loadsAllocations().length > 0"
 >
   تخصیص باری برای نمایش وجود ندارد.
