ui[transport-companies-form][src/app/components/forms/transport-companies-form/transport-companies-form.component.html]: change password reset button severity from warn to info

--- a/src/app/components/forms/transport-companies-form/transport-companies-form.component.html
+++ b/src/app/components/forms/transport-companies-form/transport-companies-form.component.html
@@ -128,7 +128,7 @@
     <app-button
       (click)="confirmResetPassword()"
       [disabled]="TCId.invalid || loading()"
-      severity="warn"
+      severity="info"
       [label]="appTitle.buttons.generateNewPassword"
       styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
     ></app-button>
