fix(*)[src/app/*]:fix bug

--- a/src/app/components/forms/carousel-form/carousel-form.component.html
+++ b/src/app/components/forms/carousel-form/carousel-form.component.html
@@ -45,6 +45,7 @@
       validationField="id"
       [control]="ctrl('carouselId')"
       [readOnly]="true"
+      type="number"
       [addonWidth]="addonWidth"
     ></app-text-input>
 
@@ -61,6 +62,7 @@
       placeholder="آدرس (URL)"
       validationField="URL"
       [control]="ctrl('url')"
+      language="fa"
       [addonWidth]="addonWidth"
     ></app-text-input>
 
