fix(*)[src/app/*]:fix bug

--- a/src/app/components/forms/carousel-form/carousel-form.component.html
+++ b/src/app/components/forms/carousel-form/carousel-form.component.html
@@ -62,7 +62,7 @@
       placeholder="آدرس (URL)"
       validationField="URL"
       [control]="ctrl('url')"
-      language="fa"
+      language="en"
       [addonWidth]="addonWidth"
     ></app-text-input>
 
