--- a/src/app/components/shared/main-view/carousel/carousel.component.html
+++ b/src/app/components/shared/main-view/carousel/carousel.component.html
@@ -1,45 +1,43 @@
 <!-- Skeleton -->
 @if (images().length === 0) {
-<div class="flex w-screen justify-center gap-4 my-[1rem] px-[3rem] mb-10">
-  @for (item of skeletonArrayNumber; track $index) {
-  <p-skeleton
-    [style]="{
-      height: '12rem',
-      'min-height': '10rem',
-      'max-height': '20rem',
-      width: '100%',
-      'min-width': '10rem',
-      'max-width': '20rem'
-    }"
-    borderRadius="16px"
-  />
-  }
-</div>
-}@else {
-<!-- Carousel -->
-<p-carousel
-  [value]="images()"
-  [numVisible]="3"
-  [numScroll]="3"
-  [circular]="customCarouselTokens().circular"
-  [responsiveOptions]="customCarouselTokens().responsiveOptions"
-  [autoplayInterval]="customCarouselTokens().autoplayInterval"
-  [dt]="customCarouselTokens()"
-  class="w-full min-h-[10rem] max-h-[15rem] items-center mb-[2rem]"
->
-  <ng-template #item let-product>
-    <!-- Carousel cards -->
-    <div
-      class="w-auto h-[13rem] m-3 rounded-2xl shadow-[0_0_10px_rgba(0,0,0,1)]"
-    >
-      <a [href]="product.imgLink" target="_blank">
-        <img
-          class="w-full h-full rounded-2xl"
-          [src]="product.imgSrc"
-          [alt]="product.title"
-        />
-      </a>
-    </div>
-  </ng-template>
-</p-carousel>
+  <div class="flex w-screen justify-center gap-4 my-4 px-12 mb-10">
+    @for (item of skeletonArrayNumber; track $index) {
+      <p-skeleton
+        [style]="{
+          height: '12rem',
+          'min-height': '10rem',
+          'max-height': '20rem',
+          width: '100%',
+          'min-width': '10rem',
+          'max-width': '20rem',
+        }"
+        borderRadius="16px"
+      />
+    }
+  </div>
+} @else {
+  <!-- Carousel -->
+  <p-carousel
+    [value]="images()"
+    [numVisible]="3"
+    [numScroll]="3"
+    [circular]="customCarouselTokens().circular"
+    [responsiveOptions]="customCarouselTokens().responsiveOptions"
+    [autoplayInterval]="customCarouselTokens().autoplayInterval"
+    [dt]="customCarouselTokens()"
+    class="w-full min-h-40 max-h-60 items-center mb-8"
+  >
+    <ng-template #item let-product>
+      <!-- Carousel cards -->
+      <div class="w-auto h-52 m-3 rounded-2xl shadow-[0_0_10px_rgba(0,0,0,1)]">
+        <a [href]="product.imgLink" target="_blank">
+          <img
+            class="w-full h-full rounded-2xl"
+            [src]="product.src"
+            [alt]="product.title"
+          />
+        </a>
+      </div>
+    </ng-template>
+  </p-carousel>
 }
