feat(lad-places-form)[src/app/components/forms/lad-places-form/lad-places-form.component.html] disable caching option added

--- a/src/app/components/forms/lad-places-form/lad-places-form.component.html
+++ b/src/app/components/forms/lad-places-form/lad-places-form.component.html
@@ -4,6 +4,7 @@
   [itemMatchesQuery]="filterLADPlace"
   (searchResult)="handelSearchLADPlaces($event)"
   [minSearchLength]="2"
+  [enableCaching]="false"
   [control]="searchFiledControl"
   [disableSearchButton]="searchFiledControl.invalid"
 />
