fix(*)[src/app/*]:fix bug

--- a/src/app/components/forms/product-form/product-form.component.html
+++ b/src/app/components/forms/product-form/product-form.component.html
@@ -1,7 +1,10 @@
 <app-tree-table-checkbox
   [tree]="products"
-  [cols]="['فعال/غیرفعال']"
-  [rows]="[['ProductTypeTitle', 'ProductTitle']]"
+  [cols]="['فعال/غیرفعال', 'شناسه']"
+  [rows]="[
+    ['ProductTypeTitle', 'ProductTitle'],
+    ['ProductTypeId', 'ProductId'],
+  ]"
   [enabledSearch]="true"
   [searchFields]="['ProductTitle', 'ProductTypeTitle']"
   [paginator]="true"
