feat(table.component)[src/app/components/shared/table/table.component.html] add disable support to action buttons

--- a/src/app/components/shared/table/table.component.html
+++ b/src/app/components/shared/table/table.component.html
@@ -102,6 +102,7 @@
                   (click)="column.onAction?.(row)"
                   [severity]="column.buttonSeverity ?? defaultButtonSeverity"
                   [styleClass]="getColumnClass(column, row)"
+                  [disabled]="isDisable(column, row)"
                 />
               }
 
@@ -111,6 +112,7 @@
                   (click)="column.onAction?.(row)"
                   [severity]="column.buttonSeverity ?? defaultButtonSeverity"
                   [styleClass]="getColumnClass(column, row)"
+                  [disabled]="isDisable(column, row)"
                 />
               }
 
