--- a/src/app/components/forms/traffic-management-forms/traffic-and-parking-tariff-form/traffic-and-parking-tariff-form.component.html
+++ b/src/app/components/forms/traffic-management-forms/traffic-and-parking-tariff-form/traffic-and-parking-tariff-form.component.html
@@ -69,7 +69,7 @@
   <!-- Actions -->
   <div class="flex gap-3 justify-end mt-6">
     <app-button
-      label="تأیید"
+      label="ثبت"
       (click)="registerTariffCost()"
       severity="primary"
       styleClass="w-28 md:w-36"
