fix(traffic-card-type-form.component)[src/app/components/forms/traffic-management-forms/traffic-card-type-form/traffic-card-type-form.component.html] update dialog header title

--- a/src/app/components/forms/traffic-management-forms/traffic-card-type-form/traffic-card-type-form.component.html
+++ b/src/app/components/forms/traffic-management-forms/traffic-card-type-form/traffic-card-type-form.component.html
@@ -71,7 +71,7 @@
 --------------------------------------------------------------------- -->
 <p-dialog
   [(visible)]="isFormVisible"
-  header="ثبت کارت تردد"
+  header="نوع کارت تردد"
   [modal]="true"
   [style]="{ width: '40rem', maxWidth: '100%' }"
   [maskStyle]="{ padding: '1rem' }"
