fix(text-input.component)[src/app/components/shared/inputs/text-input/text-input.component.html] remove unused z-index class

--- a/src/app/components/shared/inputs/text-input/text-input.component.html
+++ b/src/app/components/shared/inputs/text-input/text-input.component.html
@@ -6,7 +6,7 @@
       class="rounded-2xl p-0 m-0 border-0"
     >
       <div
-        class="w-full h-full flex justify-center items-center bg-primary-emphasis z-1 rounded-r-2xl text-primary-contrast"
+        class="w-full h-full flex justify-center items-center bg-primary-emphasis rounded-r-2xl text-primary-contrast"
         [class.px-6]="!imageAddon()"
         [class.py-4]="!imageAddon()"
       >
