style(ticket-track-form.component)[src/app/components/forms/tickets-management-form/ticket-track-form/ticket-track-form.component.html] update chat dialog border style

--- a/src/app/components/forms/tickets-management-form/ticket-track-form/ticket-track-form.component.html
+++ b/src/app/components/forms/tickets-management-form/ticket-track-form/ticket-track-form.component.html
@@ -104,7 +104,7 @@
     [maskStyle]="{ padding: '1rem' }"
   >
     @if (chatDialogVisible && currentTicket()) {
-      <div class="border-t-1">
+      <div class="border-t">
         <app-ticket-chat-message-form
           [ticket]="currentTicket()"
           [userId]="currentTicket()?.userId ?? 0"
