refactor(search-processes.component)[src/app/components/shared/layout/sidebar/search-processes/search-processes.component.html] update search results logic to use @for and @if block syntax

--- a/src/app/components/shared/layout/sidebar/search-processes/search-processes.component.html
+++ b/src/app/components/shared/layout/sidebar/search-processes/search-processes.component.html
@@ -4,7 +4,7 @@
     icon="pi pi-search"
     (click)="openDesktopSearchProcess()"
     placeholder="جستجو فرایند"
-  />
+    />
 </div>
 
 <p-button
@@ -26,7 +26,7 @@
   [style]="{ width: '48rem', maxWidth: '95vw', height: '600px' }"
   [(visible)]="isDialogVisible"
   position="center"
->
+  >
   <div class="flex flex-col h-full">
     <app-search-input
       class="mb-4 mt-2"
@@ -37,40 +37,40 @@
       [onSearchQuery]="searchProcess"
       [id]="inputSearchId"
       [minSearchLength]="0"
-    />
+      />
 
-    <div
-      *ngIf="processes().length; else noResults"
-      class="overflow-y-auto flex-1 space-y-3"
-    >
+    @if (processes().length) {
       <div
-        *ngFor="let process of processes()"
-        class="p-4 rounded-lg border border-gray-300 dark:border-gray-700 hover:bg-highlight cursor-pointer transition"
-        (click)="onSelectProcess(process)"
-      >
-        <div class="flex flex-row gap-2">
-          <i
-            class="pi text-lg font-semibold text-primary"
-            [class]="process.icon"
-          >
-          </i>
-
-          <h3 class="text-lg font-semibold text-primary">
-            {{ process.title }}
-          </h3>
-        </div>
-        <p class="text-gray-600 dark:text-gray-400 mt-1 text-sm line-clamp-2">
-          {{ process.description }}
-        </p>
+        class="overflow-y-auto flex-1 space-y-3"
+        >
+        @for (process of processes(); track process) {
+          <div
+            class="p-4 rounded-lg border border-gray-300 dark:border-gray-700 hover:bg-highlight cursor-pointer transition"
+            (click)="onSelectProcess(process)"
+            >
+            <div class="flex flex-row gap-2">
+              <i
+                class="pi text-lg font-semibold text-primary"
+                [class]="process.icon"
+                >
+              </i>
+              <h3 class="text-lg font-semibold text-primary">
+                {{ process.title }}
+              </h3>
+            </div>
+            <p class="text-gray-600 dark:text-gray-400 mt-1 text-sm line-clamp-2">
+              {{ process.description }}
+            </p>
+          </div>
+        }
       </div>
-    </div>
-
-    <ng-template #noResults>
+    } @else {
       <div
         class="flex items-center justify-center h-full text-gray-500 dark:text-gray-400 italic"
-      >
+        >
         فرایندی یافت نشد
       </div>
-    </ng-template>
+    }
+
   </div>
 </p-dialog>
