--- a/src/app/components/shared/layout/header/wallet-profile/wallet-profile.component.html
+++ b/src/app/components/shared/layout/header/wallet-profile/wallet-profile.component.html
@@ -2,30 +2,30 @@
 <div
   class="flex h-10 rounded-full bg-button-secondary text-button-secondary hover:bg-button-secondary-hover hover:scale-105 transition-all duration-50 active:translate-y-0.5 active:shadow-sm active:scale-100"
   (click)="walletPopover.toggle($event)"
->
+  >
   <!-- Wallet Icon -->
   <p-avatar
     icon="pi pi-wallet"
     shape="square"
     size="normal"
     class="w-10 h-full text-info rounded-r-full rounded-bl-full shadow-[-5px_0_5px_rgba(0,0,0,0.4)]"
-  />
+    />
   <!-- Wallet Loading State -->
-  <div
-    class="flex flex-col justify-center items-center gap-1 pl-2"
-    *ngIf="!isUserWalletLoad(); else walletContent"
-  >
-    <p-skeleton width="7rem" />
-    <p-skeleton height="0.5rem" />
-  </div>
-
-  <!-- Wallet Info (When Loaded) -->
-  <ng-template #walletContent>
+  @if (!isUserWalletLoad()) {
+    <div
+      class="flex flex-col justify-center items-center gap-1 pl-2"
+      >
+      <p-skeleton width="7rem" />
+      <p-skeleton height="0.5rem" />
+    </div>
+  } @else {
     <div class="flex items-center gap-2 px-3 py-1 text-sm font-semibold">
       <span>{{ wallet()?.Balance | number: "1.0-0" }} ریال</span>
       <i class="pi pi-angle-down text-xs text-muted-foreground"></i>
     </div>
-  </ng-template>
+  }
+
+  <!-- Wallet Info (When Loaded) -->
 </div>
 
 <!-- Wallet Popover -->
@@ -36,10 +36,10 @@
     },
   }"
   #walletPopover
->
+  >
   <div
     class="w-64 p-2 rounded-xl bg-background flex flex-col gap-2 font-medium"
-  >
+    >
     <!-- Wallet Summary -->
     <div class="flex items-center justify-between text-sm pb-3">
       <span class="text-muted-foreground">موجودی کیف پول</span>
@@ -52,7 +52,7 @@
     <button
       (click)="openWallet(walletPopover)"
       class="flex items-center h-[3rem] w-full gap-3 px-3 py-2 focus:outline-0 rounded-2xl bg-green-200 hover:bg-green-300 dark:bg-green-800 dark:hover:bg-green-700 transition-colors"
-    >
+      >
       <i class="pi pi-plus-circle text-emerald-600 dark:text-emerald-400"></i>
       <span>شارژ کیف پول</span>
     </button>
