--- a/src/app/components/shared/layout/tab-manager/tab-manager.component.html
+++ b/src/app/components/shared/layout/tab-manager/tab-manager.component.html
@@ -11,7 +11,7 @@
             <div
               [id]="tab.id"
               (click)="onClickTab(tab)"
-              class="flex gap-2 rounded-t-2xl pr-3 py-2 cursor-pointer transition-all ease-in-out duration-300 border-1"
+              class="flex gap-2 rounded-t-2xl pr-3 py-2 cursor-pointer transition-all ease-in-out duration-300 border"
               [class.bg-highlight-emphasis]="selectTab().id === tab.id"
               [ngClass]="{
                 'pl-7 text-shadow-primary-emphasis border-primary font-bold text-sm':
