--- a/src/app/components/shared/layout/mobile-tab-bar/mobile-tab-bar.component.html
+++ b/src/app/components/shared/layout/mobile-tab-bar/mobile-tab-bar.component.html
@@ -16,16 +16,17 @@
       >
         <button
           pButton
-          [icon]="`pi ${tab.icon}`"
           [rounded]="true"
-          [severity]="isTabActive(tab) ? 'info' : 'secondary'"
-          class="transition-transform duration-500 ease-in-out"
+          [severity]="isTabActive(tab) ? 'primary' : 'secondary'"
+          class="transition-transform duration-500 ease-in-out rounded-full"
           [ngClass]="{
             'scale-[1.5] sm:scale-[1.6] bg-primary-400 border-primary-emphasis border-2':
               isTabActive(tab),
             'scale-[1.2] sm:scale-[1.3] bg-secondary': !isTabActive(tab),
           }"
-        ></button>
+        >
+          <i [class]="`pi ${tab.icon}`" class="py-[3.5px]"> </i>
+        </button>
 
         <span
           class="truncate w-full text-center px-2 text-sm transition-colors duration-300 ease-in-out"
