--- a/src/app/components/shared/layout/tab-manager/tab-manager.component.scss
+++ b/src/app/components/shared/layout/tab-manager/tab-manager.component.scss
@@ -10,6 +10,7 @@
   background-color: transparent;
   padding: 0 8px 0 0;
   margin: 0;
+  z-index: 8;
   .p-tab {
     border: none;
     padding: 0.8rem 0.7rem 0.8rem 0.8rem;
