fix(ui): Disable browser autocomplete in search-auto-complete and text-input

--- a/src/app/components/shared/inputs/search-auto-complete/search-auto-complete.component.html
+++ b/src/app/components/shared/inputs/search-auto-complete/search-auto-complete.component.html
@@ -18,6 +18,7 @@
       (focus)="onFocusInput($event)"
       (input)="valueInputChange($event)"
       [language]="language"
+      autocomplete="off"
     />
   </div>
 
