--- a/src/app/components/forms/tpt-parameters-management/tpt-parameters-announcement-relation-form/tpt-parameters-announcement-relation-form.component.html
+++ b/src/app/components/forms/tpt-parameters-management/tpt-parameters-announcement-relation-form/tpt-parameters-announcement-relation-form.component.html
@@ -35,7 +35,7 @@
 
       <app-text-input
         label="مبلغ"
-        [control]="this.ctrl('Mblgh')"
+        [control]="this.ctrl('Cost')"
         [addonWidth]="addonWidth"
         type="number"
         format="currency"
