feat(forget-password-form): enhance form with OTP verification and cooldown timer

--- a/src/app/components/forms/forget-password-form/forget-password-form.component.html
+++ b/src/app/components/forms/forget-password-form/forget-password-form.component.html
@@ -1,32 +1,82 @@
 <form
   class="flex flex-col gap-12 mb-8"
-  [formGroup]="forgetPasswordForm"
+  [formGroup]="form"
   (ngSubmit)="onSubmit()"
 >
   <div class="flex flex-col gap-8">
     <h3 class="text-center" [innerHTML]="forgetPasswordTitle"></h3>
-
     <p class="text-center">
-      شماره تلفنی که در سامانه برای شما ثبت شده است را وارد کنید و سپس منتظر
-      دریافت رمز خود از طریق سامانه پیامکی با سرشماره سامانه باشید.
+      شماره تلفنی که در سامانه برای شما ثبت شده است را وارد کنید و سپس منتظر کد
+      یک‌بارمصرف باشید. پس از وارد کردن کد، رمز عبور شما از طریق سامانه پیامکی
+      با سرشماره سامانه ارسال خواهد شد.
     </p>
   </div>
 
-  <app-text-input
-    label="شماره موبایل"
-    placeholder="شماره موبایل خود را وارد کنید."
-    validationField="mobile"
-    [control]="phone"
-    type="number"
-  />
+  <div class="grid gap-5">
+    <app-text-input
+      label="شماره موبایل"
+      placeholder="شماره موبایل خود را وارد کنید."
+      validationField="mobile"
+      [control]="ctrl('phone')"
+      type="number"
+    />
 
+    <app-captcha-input
+      #captchaRef
+      [sessionIdControl]="ctrl('sessionId')"
+      [captchaInputControl]="ctrl('captcha')"
+    />
+  </div>
   <div class="flex flex-col gap-2 mb-8">
     <app-button
-      [disabled]="forgetPasswordForm.invalid"
+      [disabled]="form.invalid || remainingTime() > 0"
       type="submit"
       styleClass="px-8 h-2-5rem w-full"
     >
       تایید
     </app-button>
+    @if (remainingTime() > 0) {
+      <p class="text-sm text-gray-400 text-center py-2">
+        جهت ارسال دوباره کد لطفاً {{ formatSeconds(remainingTime()) }} صبر کنید
+      </p>
+    }
   </div>
 </form>
+
+<!-- OTP Dialog -->
+<p-dialog
+  header="تایید کد یک‌بارمصرف"
+  [modal]="true"
+  [draggable]="false"
+  [(visible)]="isDialogVisible"
+  (onHide)="resetForm()"
+  [style]="{ width: '30rem', maxWidth: '100%' }"
+>
+  <div class="flex flex-col gap-4">
+    <p class="text-sm">
+      کاربر گرامی، رمز یک‌بارمصرف به شماره
+      <strong class="text-base">{{ sentPhoneNumber() }}</strong>
+      ارسال شد. لطفاً برای تغییر رمز کاربری خود، رمز پیامک شده را وارد نمایید.
+    </p>
+
+    <div class="grid grid-cols-1 gap-4">
+      <app-text-input
+        label="رمز یک بار مصرف"
+        placeholder="رمز یکبار مصرف"
+        validationField="optCode"
+        [control]="optCodeCrl"
+        type="number"
+      />
+
+      <div class="flex justify-center items-center py-1">
+        <app-button
+          (click)="verifyCode()"
+          styleClass="px-10"
+          [disabled]="optCodeCrl.invalid || loading()"
+        >
+          تایید
+        </app-button>
+      </div>
+    </div>
+  </div>
+</p-dialog>
